Updated feature section styling

--- a/educhat/educhat.html
+++ b/educhat/educhat.html
@@ -34,20 +34,39 @@
 <section class="containers">
 <div class="ab">
 <h1>Features</h1>
-<ul>
-<li><img src="2.jpeg"width="200"height="150"></li>
-<li><img src="1.jpeg"width="200"height="150"></li>
-<li><img src="3.jpeg"width="200"height="150"></li>
-</ul>
+<div class="features">
+  <div class="feature-item">
+    <img src="2.jpeg" alt="Secure Chat">
+    <p>Secure Chat</p>
+  </div>
+  <div class="feature-item">
+    <img src="1.jpeg" alt="ERP Integration">
+    <p>ERP Integration</p>
+  </div>
+  <div class="feature-item">
+    <img src="3.jpeg" alt="AI-Powered">
+    <p>AI-Powered</p>
+  </div>
+</div>
+
+<!-- <div class="image-container">
+    <ul>
+    <li><img src="2.jpeg"width="200"height="150"></li>
+    <li><img src="1.jpeg"width="200"height="150"></li>
+    <li><img src="3.jpeg"width="200"height="150"></li>
+    </ul>
+</div>
+
 <ul>
 <li><a href="Secure Chat">Secure Chat</a>
 <li><a href="ERP Integration">ERP Integration</a>
 <li><a href="AI-Powered">AI-Powered</a>
-</ul>
+</ul> -->
+
 </div>
 </section>
 <footer>
-    <div class="abc">
+    <div class="footer">
         <ul>
           <li>  Home</li>
             <li>Features</li>
